--- a/ORCSG4/RobotG4/Form_Main.resx
+++ b/ORCSG4/RobotG4/Form_Main.resx
@@ -22327,7 +22327,7 @@ Mouse y:
     <value>Vertical</value>
   </data>
   <data name="textLogs.Size" type="System.Drawing.Size, System.Drawing">
-    <value>368, 34</value>
+    <value>188, 34</value>
   </data>
   <data name="textLogs.TabIndex" type="System.Int32, mscorlib">
     <value>15</value>
@@ -22342,7 +22342,7 @@ Mouse y:
     <value>groupRobotLogs</value>
   </data>
   <data name="&gt;&gt;textLogs.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>1</value>
   </data>
   <data name="groupSettinsAndInformations.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 8.25pt, style=Bold</value>
@@ -22470,44 +22470,35 @@ Mouse y:
   <data name="&gt;&gt;ConsoleStat.ZOrder" xml:space="preserve">
     <value>18</value>
   </data>
-  <data name="&gt;&gt;buttonClearLogs.Name" xml:space="preserve">
-    <value>buttonClearLogs</value>
+  <data name="textBox27.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Lucida Console, 6.75pt</value>
   </data>
-  <data name="&gt;&gt;buttonClearLogs.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="textBox27.Location" type="System.Drawing.Point, System.Drawing">
+    <value>198, 14</value>
   </data>
-  <data name="&gt;&gt;buttonClearLogs.Parent" xml:space="preserve">
+  <data name="textBox27.Multiline" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="textBox27.ScrollBars" type="System.Windows.Forms.ScrollBars, System.Windows.Forms">
+    <value>Vertical</value>
+  </data>
+  <data name="textBox27.Size" type="System.Drawing.Size, System.Drawing">
+    <value>176, 34</value>
+  </data>
+  <data name="textBox27.TabIndex" type="System.Int32, mscorlib">
+    <value>34</value>
+  </data>
+  <data name="&gt;&gt;textBox27.Name" xml:space="preserve">
+    <value>textBox27</value>
+  </data>
+  <data name="&gt;&gt;textBox27.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;textBox27.Parent" xml:space="preserve">
     <value>groupRobotLogs</value>
   </data>
-  <data name="&gt;&gt;buttonClearLogs.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="groupRobotLogs.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 8.25pt, style=Bold</value>
-  </data>
-  <data name="groupRobotLogs.Location" type="System.Drawing.Point, System.Drawing">
-    <value>8, 640</value>
-  </data>
-  <data name="groupRobotLogs.Size" type="System.Drawing.Size, System.Drawing">
-    <value>380, 54</value>
-  </data>
-  <data name="groupRobotLogs.TabIndex" type="System.Int32, mscorlib">
-    <value>23</value>
-  </data>
-  <data name="groupRobotLogs.Text" xml:space="preserve">
-    <value> ROBOT Logs </value>
-  </data>
-  <data name="&gt;&gt;groupRobotLogs.Name" xml:space="preserve">
-    <value>groupRobotLogs</value>
-  </data>
-  <data name="&gt;&gt;groupRobotLogs.Type" xml:space="preserve">
-    <value>System.Windows.Forms.GroupBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;groupRobotLogs.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;groupRobotLogs.ZOrder" xml:space="preserve">
-    <value>28</value>
+  <data name="&gt;&gt;textBox27.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
   <data name="buttonClearLogs.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
@@ -22519,7 +22510,7 @@ Mouse y:
     <value>NoControl</value>
   </data>
   <data name="buttonClearLogs.Location" type="System.Drawing.Point, System.Drawing">
-    <value>278, 24</value>
+    <value>161, 24</value>
   </data>
   <data name="buttonClearLogs.Size" type="System.Drawing.Size, System.Drawing">
     <value>80, 18</value>
@@ -22540,7 +22531,34 @@ Mouse y:
     <value>groupRobotLogs</value>
   </data>
   <data name="&gt;&gt;buttonClearLogs.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
+  </data>
+  <data name="groupRobotLogs.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 8.25pt, style=Bold</value>
+  </data>
+  <data name="groupRobotLogs.Location" type="System.Drawing.Point, System.Drawing">
+    <value>8, 640</value>
+  </data>
+  <data name="groupRobotLogs.Size" type="System.Drawing.Size, System.Drawing">
+    <value>380, 54</value>
+  </data>
+  <data name="groupRobotLogs.TabIndex" type="System.Int32, mscorlib">
+    <value>23</value>
+  </data>
+  <data name="groupRobotLogs.Text" xml:space="preserve">
+    <value>Robot Log Input                         Robot Log Output</value>
+  </data>
+  <data name="&gt;&gt;groupRobotLogs.Name" xml:space="preserve">
+    <value>groupRobotLogs</value>
+  </data>
+  <data name="&gt;&gt;groupRobotLogs.Type" xml:space="preserve">
+    <value>System.Windows.Forms.GroupBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;groupRobotLogs.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;groupRobotLogs.ZOrder" xml:space="preserve">
+    <value>28</value>
   </data>
   <metadata name="ItemsMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>3, 0</value>
